--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -136,6 +136,11 @@
             "content": "Are you sure you want to delete this record?",
             "btn_confirm": "Confirm",
             "btn_cancel": "Cancel"
+        },
+        "must_login": {
+            "title": "Session Expired",
+            "content": "Please log in again.",
+            "confirm": "Confirm"
         }
     },
     "DAYS": {
